--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.10.1",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "dayjs": "^1.11.7",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "next": "13.1.4",
