--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.4",
     "@prisma/client": "^4.10.1",
+    "@supabase/supabase-js": "^2.10.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "dayjs": "^1.11.7",
